samples/_failures_safe/1761393451_a1c04b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ceb4646.c: In function ‘main’:
./samples/SAFE/__tmp_9ceb4646.c:155:9: error: expected declaration or statement at end of input
  155 |         if (!state_machine_handle_event(&sm, EVENT_RESET)) {
      |         ^~
./samples/SAFE/__tmp_9ceb4646.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ceb4646.c:155:9: error: expected declaration or statement at end of input
